added sky products

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                             <li><a href="javascript:void(0);" id="modalLink1" onClick="openModal(1)"> Blended Spices </a></li>
                             <li><a href="javascript:void(0);" id="modalLink2" onClick="openModal(2)"> Basic Spices</a></li>
                             <li><a href="javascript:void(0);" id="modalLink3" onClick="openModal(3)"> Additonal Spices</a> </li>
-                            <li><a href="javascript:void(0);" id="modalLink4" onClick="openModal(4)">Gulal and Colors</a></li>
-                            <li><a href="javascript:void(0);" id="modalLink5" onClick="openModal(5)">Others</a></li>
+                            <li><a href="javascript:void(0);" id="modalLink4" onClick="openModal(4)"> Gulal and Colors</a></li>
+                            <li><a href="javascript:void(0);" id="modalLink5" onClick="openModal(5)"> Others</a></li>
                             <!-- <li>
                                 <label for="drop-2" class="toggle"> Menu 1.1 </label>
                                 <a href="#">Sub Menu 1-3</a>
@@ -108,9 +108,19 @@
                       <label for="drop-11" class="toggle">Sky Surf</label>
                       <a href="#"> Sky Surf</a>
                       <input type="checkbox" id="drop-11" />
-                      <!-- <ul>
-                          <li><a href="javascript:void(0);" id="modalLink27" onClick="openModal(27)"> Satyendra Regular Sattoo ( 80gm ) </a></li>
-                      -->
+                       <ul>
+                           <li><a href="javascript:void(0);" id="modalLink48" onClick="openModal(48)"> Sky Surf 5Kg </a></li>
+                           <li><a href="javascript:void(0);" id="modalLink49" onClick="openModal(49)"> Sky Surf 3Kg </a></li>
+                           <li><a href="javascript:void(0);" id="modalLink50" onClick="openModal(50)"> Sky Surf 2Kg </a></li>
+                           <li><a href="javascript:void(0);" id="modalLink51" onClick="openModal(51)"> Sky Surf 1Kg </a></li>
+                           <li><a href="javascript:void(0);" id="modalLink52" onClick="openModal(52)"> Sky Surf 500gm </a></li>
+                           <li><a href="javascript:void(0);" id="modalLink53" onClick="openModal(53)"> Sky Surf (Rs.10) </a></li>
+                           <li><a href="javascript:void(0);" id="modalLink54" onClick="openModal(54)"> Sky Dishwash 900gm </a></li>
+                           <li><a href="javascript:void(0);" id="modalLink55" onClick="openModal(55)"> Sky Dishwash 400gm </a></li>
+                           <li><a href="javascript:void(0);" id="modalLink56" onClick="openModal(56)"> Sky Dishwash 220gm (Rs.10)</a></li>
+                           <li><a href="javascript:void(0);" id="modalLink57" onClick="openModal(57)"> Sky Dishwash 110gm (Rs. 5) </a></li>
+                           <li><a href="javascript:void(0);" id="modalLink58" onClick="openModal(58)"> Sky Detergent Cake 300gm (Rs.10) </a></li>
+                       </ul>
                     </li>
                     <li>
                         <label for="drop-2" class="toggle dropdown-menu"> Sloppy Noodles  <span class="dropdown-icon">+</span> </label>
@@ -536,6 +546,28 @@
                 <img src="assets/img/satyendra-food/satyendra-traditional-satoo-200gm/satyendra-traditional-satoo-200gm.jpeg" class="modal-img">
             </div>
         </div>
+        <div id="modal31" class="modal">
+            <!-- modal content-->
+            <div class="modal-content">
+                <span class="close" onClick="closeModal(31)">&times;</span>
+
+                <h1> Satyendra Satoo (Loose) </h1>
+                <p> Satyendra Food</p>
+                <img src="assets/img/satyendra-food/satyendra-satoo-loose/satyendra-satoo-loose-1.jpeg" class="modal-img">
+                <img src="assets/img/satyendra-food/satyendra-satoo-loose/satyendra-satoo-loose-2.jpeg" class="modal-img">
+                <img src="assets/img/satyendra-food/satyendra-satoo-loose/satyendra-satoo-loose-3.jpeg" class="modal-img">
+            </div>
+        </div>
+        <div id="modal32" class="modal">
+           <!-- modal content -->
+           <div class="modal-content">
+                <span class="close" onClick="closeModal(32)">&times;</span>
+                <h1> Satyendra Besan (Loose) </h1>
+                <p> Satyendra Food</p>
+                <img src="assets/img/satyendra-food/satyendra-besan-loose/satyendra-besan-1.jpeg" class="modal-img">
+                <img src="assets/img/satyendra-food/satyendra-besan-loose/satyendra-besan-2.jpeg" class="modal-img">
+           </div>
+        </div>
           <div id="modal33" class="modal">
               <!-- modal content-->
               <div class="modal-content">
@@ -718,6 +750,141 @@
                           <img src="assets/img/other-products/ganesh-soyabean.jpeg" class="modal-img">
                     </div>
                </div>
+
+
+               <!-- sky surf -->
+               <div id="modal48" class="modal">
+                  <!-- modal content -->
+                    <div class="modal-content">
+
+                            <!-- The close button -->
+                            <span class="close" onClick="closeModal(48)">&times;</span>
+
+                            <h1>Sky Surf 5Kg</h1>
+                            <p> Sky Surf </p>
+                            <img src="assets/img/sky/sky-5kg.jpeg" class="modal-img">
+                      </div>
+                 </div>
+                 <div id="modal49" class="modal">
+                    <!-- modal content -->
+                      <div class="modal-content">
+
+                              <!-- The close button -->
+                              <span class="close" onClick="closeModal(49)">&times;</span>
+
+                              <h1>Sky Surf 3Kg</h1>
+                              <p> Sky Surf</p>
+                              <img src="assets/img/sky/sky-3kg.jpeg" class="modal-img">
+                        </div>
+                   </div>
+                   <div id="modal50" class="modal">
+                      <!-- modal content -->
+                        <div class="modal-content">
+
+                                <!-- The close button -->
+                                <span class="close" onClick="closeModal(50)">&times;</span>
+
+                                <h1>Sky Surf 2Kg</h1>
+                                <p> Sky Surf</p>
+                                <img src="assets/img/sky/sky-2kg.jpeg" class="modal-img">
+                          </div>
+                     </div>
+                     <div id="modal51" class="modal">
+                        <!-- modal content -->
+                          <div class="modal-content">
+
+                                  <!-- The close button -->
+                                  <span class="close" onClick="closeModal(51)">&times;</span>
+
+                                  <h1>Sky Surf 1Kg</h1>
+                                  <p> Sky Surf </p>
+                                  <img src="assets/img/sky/sky-1kg.jpeg" class="modal-img">
+                            </div>
+                       </div>
+                       <div id="modal52" class="modal">
+                          <!-- modal content -->
+                            <div class="modal-content">
+
+                                    <!-- The close button -->
+                                    <span class="close" onClick="closeModal(52)">&times;</span>
+
+                                    <h1>Sky Surf 500Gm</h1>
+                                    <p> Sky Surf</p>
+                                    <img src="assets/img/sky/sky-500gm.jpeg" class="modal-img">
+                              </div>
+                         </div>
+                         <div id="modal53" class="modal">
+                            <!-- modal content -->
+                              <div class="modal-content">
+
+                                      <!-- The close button -->
+                                      <span class="close" onClick="closeModal(53)">&times;</span>
+
+                                      <h1>Sky Surf ( Rs 10 )</h1>
+                                      <p> Sky Surf </p>
+                                      <img src="assets/img/sky/sky-10rs.jpeg" class="modal-img">
+                                </div>
+                           </div>
+                           <div id="modal54" class="modal">
+                              <!-- modal content -->
+                                <div class="modal-content">
+
+                                        <!-- The close button -->
+                                        <span class="close" onClick="closeModal(54)">&times;</span>
+
+                                        <h1>Sky Dishwash 900Gm</h1>
+                                        <p> Sky Surf</p>
+                                        <img src="assets/img/sky/sky-dishwasher-lime.jpeg" class="modal-img">
+                                  </div>
+                             </div>
+                             <div id="modal55" class="modal">
+                                <!-- modal content -->
+                                  <div class="modal-content">
+
+                                          <!-- The close button -->
+                                          <span class="close" onClick="closeModal(55)">&times;</span>
+
+                                          <h1>Sky Dishwash 400Gm</h1>
+                                          <p> Sky Surf </p>
+                                          <img src="assets/img/sky/sky-dishwasher-400gm.jpeg" class="modal-img">
+                                    </div>
+                               </div>
+                               <div id="modal56" class="modal">
+                                  <!-- modal content -->
+                                    <div class="modal-content">
+
+                                            <!-- The close button -->
+                                            <span class="close" onClick="closeModal(56)">&times;</span>
+
+                                            <h1>Sky Dishwash 220Gm ( Rs 10 )</h1>
+                                            <p> Sky Surf</p>
+                                            <img src="assets/img/sky/sky-dishwash-200gm.jpeg" class="modal-img">
+                                      </div>
+                                 </div>
+                                 <div id="modal57" class="modal">
+                                    <!-- modal content -->
+                                      <div class="modal-content">
+
+                                              <!-- The close button -->
+                                              <span class="close" onClick="closeModal(57)">&times;</span>
+
+                                              <h1>Sky Dishwash 110Gm ( Rs 5 )</h1>
+                                              <p> Sky Surf </p>
+                                              <img src="assets/img/sky/sky-dishwash-110gm.jpeg" class="modal-img">
+                                        </div>
+                                   </div>
+                                   <div id="modal58" class="modal">
+                                      <!-- modal content -->
+                                        <div class="modal-content">
+
+                                                <!-- The close button -->
+                                                <span class="close" onClick="closeModal(58)">&times;</span>
+
+                                                <h1>Sky Detergent Cake 300Gm ( Rs 10 )</h1>
+                                                <p> Sky Surf</p>
+                                                <img src="assets/img/sky/sky-dishwash-10rs.jpeg" class="modal-img">
+                                          </div>
+                                     </div>
       </section>
       <section id="home">
         <h1 class="section-title">Best Products @ Best Price</h1>
@@ -757,7 +924,7 @@
             <div class="about-container">
                 <h1 class="section-title">About Us</h1>
                     <p class="section-description">
-                        Sujeet Kirana Store - established at 2010 founded by Binod Sah (CEO) and Sujeet Kumar Gupta (Business Development Manager) is a one stop store for all your kirana requirements. <br />
+                        Sujeet Kirana Store - established in 2010 founded by Binod Sah (CEO) and Sujeet Kumar Gupta (Business Development Manager) is a one stop store for all your kirana requirements. <br />
                         Dealer of : Satyendra Sattoo, Rajendra Masala, Sky Detergent Powder, Sloppy Noodles, Archita Agarbatti
                     </p>
             </div>
@@ -766,7 +933,8 @@
       <section id="contact">
         <div class="container">
             <div class="google-maps-container">
-                <div style="overflow:hidden;width: 100%;position: relative;"><iframe width="100%" height="400" src="https://maps.google.com/maps?hl=en&amp;q=Gachhi, At-Gautam Marg,Dudhaila, Sonepur, Bihar+(Sujeet Kirana Store)&amp;ie=UTF8&amp;t=&amp;z=17&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><div style="position: absolute;width: 80%;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;"><small style="line-height: 1.8;font-size: 0px;background: #fff;"> <a href="https://googlemapsembed.net/">Embed Google Map</a> </small></div><style>.nvs{position:relative;text-align:right;height:325px;width:643px;} #gmap_canvas img{max-width:none!important;background:none!important}</style></div>
+                <div style="overflow:hidden;width: 100%;position: relative;"><iframe width="100%" height="400" src="https://maps.google.com/maps?hl=en&amp;q=Sujeet Kirana Store,Gola Bazar, Sonpur, Vip Colony, Sonepur, Bihar 841101+(Sujeet Kirana Store)&amp;ie=UTF8&amp;t=&amp;z=16&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><div style="position: absolute;width: 80%;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;"><small style="line-height: 1.8;font-size: 0px;background: #fff;"> <a href="https://googlemapsembed.net/" rel="nofollow">Google Maps Embed</a> </small></div><style>.nvs{position:relative;text-align:right;height:325px;width:643px;} #gmap_canvas img{max-width:none!important;background:none!important}</style></div>
+               <!--- <div style="overflow:hidden;width: 100%;position: relative;"><iframe width="100%" height="400" src="https://maps.google.com/maps?hl=en&amp;q=Gachhi, At-Gautam Marg,Dudhaila, Sonepur, Bihar+(Sujeet Kirana Store)&amp;ie=UTF8&amp;t=&amp;z=17&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><div style="position: absolute;width: 80%;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;"><small style="line-height: 1.8;font-size: 0px;background: #fff;"> <a href="https://googlemapsembed.net/">Embed Google Map</a> </small></div><style>.nvs{position:relative;text-align:right;height:325px;width:643px;} #gmap_canvas img{max-width:none!important;background:none!important}</style></div>-->
             </div>
             <div class="address-container">
             <h2>Address :</h2>
