added some changes

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <meta name="keywords" content="kirana,online store,sujeet kirana" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link
+        rel="stylesheet"
+        href="assets/js/animate.min.css"
+     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/simple-line-icons.css" />
     <link rel="stylesheet" href="assets/css/my-slider.css"/>
     <script src="assets/js/ism-2.2.min.js"></script>
+
 
   </head>
   <body>
@@ -65,7 +70,11 @@
     <section id="products">
       <div class="products-navbar-container">
           <nav>
-                <label for="drop" class="toggle" id="menu">Agency List  <span class="icon">&#9776;</span></label>
+                <label for="drop" class="toggle" id="menu">Agency List
+
+                  <span class="icon">&#9776;</span>
+                  <span class="dot"></span>
+                </label>
                 <input type="checkbox" id="drop" />
                 <ul class="menu">
                     <li>
@@ -105,7 +114,7 @@
                        </ul>
                     </li>
                     <li>
-                      <label for="drop-11" class="toggle">Sky Surf</label>
+                      <label for="drop-11" class="toggle dropdown-menu">Sky Surf <span class="dropdown-icon">+</span></label>
                       <a href="#"> Sky Surf</a>
                       <input type="checkbox" id="drop-11" />
                        <ul>
