--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <div class="hideable">
         <!-- Contact  information goes here-->
         <h3>Contact Us</h3>
-        <p>+91 7780011796</p>
-        <p>+91 9097360099</p>
+        <p>  <i class="icon-phone icons"></i>+91 7780011796</p>
+        <p>  <i class="icon-phone icons"></i>+91 9097360099</p>
       </div>
       <div class="hideable">
         <h3>Follow us :</h3>
@@ -953,7 +953,7 @@
             <h2>Contact Us :</h2>
             <p>Email : <a href="mailto:sujeetkiranastore.sonpur@gmail.com">sujeetkiranastore.sonpur@gmail.com</a></p>
             <p>Phone Number :</p>
-            <p>+91 7780011796, +91 9097360099</p>
+            <p> <i class="icon-phone icons"></i>+91 7780011796,  <i class="icon-phone icons"></i>+91 9097360099</p>
           </div>
         </div>
       </section>
