--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <div class="hideable">
         <!-- Contact  information goes here-->
         <h3>Contact Us</h3>
-        <p>  <i class="icon-phone icons"></i>+91 7780011796</p>
-        <p>  <i class="icon-phone icons"></i>+91 9097360099</p>
+        <p>  <i class="icon-phone icons"></i><a target="_blank" href="tel:917780011796" style="text-decoration:none; color: #111;">+91 7780011796</a></p>
+        <p> <i class="icon-speech icons"></i><a target="_blank" href="https://api.whatsapp.com/send?phone=918709780015&text=Hi%20Welcome%20to%20Sujeet%20Kirana%20Store.%20How%20can%20we%20help%20you.." style="text-decoration:none; color: #111;">+91 8709780015</a></p>
       </div>
       <div class="hideable">
         <h3>Follow us :</h3>
@@ -950,15 +950,18 @@
             <p>Gola Bazar, Sonpur</p>
             <p>Saran - 841101</p>
             <p>Bihar, India</p>
+            <hr />
             <h2>Contact Us :</h2>
-            <p>Email : <a href="mailto:sujeetkiranastore.sonpur@gmail.com">sujeetkiranastore.sonpur@gmail.com</a></p>
+            <p>Email : <a href="mailto:sujeetkiranastore.sonpur@gmail.com" style="text-decoration:none; color: #111;">sujeetkiranastore.sonpur@gmail.com</a></p>
             <p>Phone Number :</p>
-            <p> <i class="icon-phone icons"></i>+91 7780011796,  <i class="icon-phone icons"></i>+91 9097360099</p>
+            <p> <i class="icon-phone icons"></i><a target="_blank" href="tel:91 7780011796" style="text-decoration:none; color: #111;"><+917780011796</a>,  <i class="icon-phone icons"></i><a target="_blank" href="tel:919097360099" style="text-decoration:none; color: #111;">+91 9097360099</a></p>
+            <p>Whatsapp Number:</p>
+            <p> <i class="icon-speech icons"></i> <a target="_blank" href="https://api.whatsapp.com/send?phone=918709780015&text=Hi%20Welcome%20to%20Sujeet%20Kirana%20Store.%20How%20can%20we%20help%20you.." style="text-decoration:none; color: #111;">+91 8709780015</a></p>
           </div>
         </div>
       </section>
     </div>
-
+    <hr />
     <footer>
         <div class="hideable-desktop">
             <h3>Follow us :</h3>
