--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <input type="checkbox" id="drop" />
                 <ul class="menu">
                     <li>
-                        <label for="drop-1" class="toggle dropdown-menu">Rajendra Masala <span class="dropdown-icon">+</span></label>
+                        <label for="drop-1" class="toggle dropdown-menu">Rajendra Masala <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
                         <a href="#">Rajendra Masala</a>
                         <input type="checkbox" id="drop-1" />
                         <ul>
@@ -100,7 +100,7 @@
                         </ul>
                     </li>
                     <li>
-                       <label for="drop-10" class="toggle dropdown-menu">Satyendra Foods <span class="dropdown-icon">+</span></label>
+                       <label for="drop-10" class="toggle dropdown-menu">Satyendra Foods  <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
                        <a href="#"> Satyendra Food</a>
                        <input type="checkbox" id="drop-10" />
                        <ul>
@@ -114,7 +114,7 @@
                        </ul>
                     </li>
                     <li>
-                      <label for="drop-11" class="toggle dropdown-menu">Sky Surf <span class="dropdown-icon">+</span></label>
+                      <label for="drop-11" class="toggle dropdown-menu">Sky Surf  <i class="icon-arrow-down dropdown"></i><span class="dropdown-icon">+</span></label>
                       <a href="#"> Sky Surf</a>
                       <input type="checkbox" id="drop-11" />
                        <ul>
@@ -132,12 +132,12 @@
                        </ul>
                     </li>
                     <li>
-                        <label for="drop-2" class="toggle dropdown-menu"> Sloppy Noodles  <span class="dropdown-icon">+</span> </label>
+                        <label for="drop-2" class="toggle dropdown-menu"> Sloppy Noodles  <i class="icon-arrow-down dropdown"></i>  <span class="dropdown-icon">+</span> </label>
                         <a href="#">Sloppy Noodles</a>
                         <input type="checkbox" id="drop-2" />
                         <ul>
                           <li>
-                            <label for="drop-3" class="toggle dropdown-menu sub-menu"> Masala Noodles <span class="dropdown-icon">+</span></label>
+                            <label for="drop-3" class="toggle dropdown-menu sub-menu"> Masala Noodles   <i class="icon-arrow-down dropdown"></i><span class="dropdown-icon">+</span></label>
                             <a href="#"> Masala Noodles</a>
                             <input type="checkbox" id="drop-3" />
                             <ul>
@@ -149,12 +149,12 @@
                         </ul>
                     </li>
                     <li>
-                        <label for="drop-4" class="toggle dropdown-menu"> Archita Agarbatti  <span class="dropdown-icon">+</span></label>
+                        <label for="drop-4" class="toggle dropdown-menu"> Archita Agarbatti  <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
                         <a href="#"> Archita Agarbatti</a>
                         <input type="checkbox" id="drop-4" />
                         <ul>
                            <li>
-                             <label for="drop-5" class="toggle dropdown-menu sub-menu"> Archita Agarbatti Rs.5  <span class="dropdown-icon">+</span></label>
+                             <label for="drop-5" class="toggle dropdown-menu sub-menu"> Archita Agarbatti Rs.5   <i class="icon-arrow-down dropdown"></i><span class="dropdown-icon">+</span></label>
                              <a href="#"> Archita Agarbatti Rs.5 </a>
                              <input type="checkbox" id="drop-5" />
                              <ul>
@@ -165,7 +165,7 @@
                              </ul>
                             </li>
                             <li>
-                              <label for="drop-6" class="toggle dropdown-menu sub-menu"> Archita Agarbatti Rs.10  <span class="dropdown-icon">+</span></label>
+                              <label for="drop-6" class="toggle dropdown-menu sub-menu"> Archita Agarbatti Rs.10  <i class="icon-arrow-down dropdown"></i>  <span class="dropdown-icon">+</span></label>
                               <a href="#"> Archita Agarbatti Rs.10</a>
                               <input type="checkbox" id="drop-6" />
                               <ul>
@@ -177,7 +177,7 @@
                               </ul>
                             </li>
                             <li>
-                                <label for="drop-7" class="toggle dropdown-menu sub-menu"> Archita Dhoop Agarbatti Rs.5  <span class="dropdown-icon">+</span></label>
+                                <label for="drop-7" class="toggle dropdown-menu sub-menu"> Archita Dhoop Agarbatti Rs.5  <i class="icon-arrow-down dropdown"></i>  <span class="dropdown-icon">+</span></label>
                                 <a href="#"> Archita Dhoop Agarbatti Rs.5</a>
                                 <input type="checkbox" id="drop-7" />
                                 <ul>
@@ -187,7 +187,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <label for="drop-8" class="toggle dropdown-menu sub-menu"> Archita Dhoop Agarbatti Rs.10  <span class="dropdown-icon">+</span></label>
+                                <label for="drop-8" class="toggle dropdown-menu sub-menu"> Archita Dhoop Agarbatti Rs.10  <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
                                 <a href="#"> Archita Dhoop Agarbatti Rs.10</a>
                                 <input type="checkbox" id="drop-8" />
                                 <ul>
@@ -197,7 +197,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <label for="drop-9" class="toggle dropdown-menu sub-menu"> Archita Dhoop Agarbatti Rs.20  <span class="dropdown-icon">+</span></label>
+                                <label for="drop-9" class="toggle dropdown-menu sub-menu"> Archita Dhoop Agarbatti Rs.20   <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
                                 <a href="#"> Archita Dhoop Agarbatti Rs.20</a>
                                 <input type="checkbox" id="drop-9" />
                                 <ul>
@@ -209,7 +209,7 @@
                         </ul>
                     </li>
                     <li>
-                        <label for="drop-15" class="toggle dropdown-menu"> Gopi's Namkeen  <span class="dropdown-icon">+</span></label>
+                        <label for="drop-15" class="toggle dropdown-menu"> Gopi's Namkeen  <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
                         <a href="#">Gopi's Namkeen</a>
                         <input type="checkbox" id="drop-15" />
                         <ul>
@@ -224,8 +224,23 @@
                            <li><a href="javascript:void(0);" id="modalLink42" onClick="openModal(42)"> Rings ( Rs 5 )</a></li>
                         </ul>
                     </li>
+                    <li>
+                       <label for="drop-17" class="toggle dropdown-menu"> Swastik Biscuits  <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span></label>
+                       <a href="#">Swastik Biscuits</a>
+                       <input type="checkbox" id="drop-17" />
+                       <ul>
+                         <li><a href="javascript:void(0);" id="modalLink59" onClick="openModal(59)"> Krispo ( Rs 5 )</a></li>
+                         <li><a href="javascript:void(0);" id="modalLink60" onClick="openModal(60)"> Cream Bite ( Rs 5 )</a></li>
+                         <li><a href="javascript:void(0);" id="modalLink61" onClick="openModal(61)"> Choco Magic ( Rs 5 )</a></li>
+                         <li><a href="javascript:void(0);" id="modalLink62" onClick="openModal(62)"> Jeera Magic ( Rs 5 )</a></li>
+                         <li><a href="javascript:void(0);" id="modalLink63" onClick="openModal(63)"> Butter ( Rs 5)</a></li>
+                         <li><a href="javascript:void(0);" id="modalLink64" onClick="openModal(64)"> Butter Twist ( Rs 5 )</a></li>
+                         <li><a href="javascript:void(0);" id="modalLink65" onClick="openModal(65)"> Marie ( Rs 5 )</a></li>
+                         <li><a href="javascript:void(0);" id="modalLink66" onClick="openModal(66)"> Krispo ( Rs 10 )</a></li>
+                       </ul>
+                    </li>
                      <li>
-                       <label for="drop-16" class="toggle dropdown-menu">Other Products <span class="dropdown-icon">+</span> </label>
+                       <label for="drop-16" class="toggle dropdown-menu">Other Products  <i class="icon-arrow-down dropdown"></i> <span class="dropdown-icon">+</span> </label>
                         <a href="#"> Other Products</a>
                         <input type="checkbox" id="drop-16" />
                         <ul>
@@ -894,6 +909,95 @@
                                                 <img src="assets/img/sky/sky-dishwash-10rs.jpeg" class="modal-img">
                                           </div>
                                      </div>
+
+                                    <!-- Swastik -->
+                                   <div id="modal59" class="modal">
+                                      <!-- modal content -->
+                                        <div class="modal-content">
+
+                                                <!-- The close button -->
+                                                <span class="close" onClick="closeModal(59)">&times;</span>
+
+                                                <h1>Krispo ( Rs 5 ) </h1>
+                                                <p>Swastik Biscuits</p>
+                                                <img src="assets/img/swastik-biscuits/krispy-5.jpeg" class="modal-img">
+                                          </div>
+                                   </div>
+                                   <div id="modal60" class="modal">
+                                     <!-- modal content-->
+                                     <div class="modal-content">
+
+                                          <!-- The close button -->
+                                          <span class="close" onClick="closeModal(60)">&times;</span>
+
+                                            <h1>  Cream Bite ( Rs 5 ) </h1>
+                                            <p> Swastik Biscuits </p>
+                                            <img src="assets/img/swastik-biscuits/cream-bite-5.jpeg" class="modal-img">
+                                     </div>
+                                   </div>
+                                   <div id="modal61" class="modal">
+                                     <!-- modal content -->
+                                     <div class="modal-content">
+
+                                          <!-- The close button -->
+                                          <span class="close" onClick="closeModal(61)">&times;</span>
+
+                                          <h1> Choco Magic (Rs 5 ) </h1>
+                                          <p> Swastik Biscuits </p>
+                                          <img src="assets/img/swastik-biscuits/choco-magic-5.jpeg" class="modal-img">
+                                     </div>
+                                   </div>
+                                  <div id="modal62" class="modal">
+                                    <!-- modal content -->
+                                    <div class="modal-content">
+
+                                        <!-- The close button -->
+                                        <span class="close" onClick="closeModal(62)">&times;</span>
+                                        <h1> Jeera Magic </h1>
+                                        <p> Swastik Biscuits </p>
+                                        <img src="assets/img/swastik-biscuits/jeera-magic-5.jpeg" class="modal-img">
+                                    </div>
+                                  </div>
+                                  <div id="modal63" class="modal">
+                                     <!-- modal content -->
+                                     <div class="modal-content">
+
+                                        <!-- The close button -->
+                                        <span class="close" onClick="closeModal(63)">&times;</span>
+                                        <h1> Butter </h1>
+                                        <img src="assets/img/swastik-biscuits/butter.jpeg" class="modal-img">
+                                     </div>
+                                  </div>
+                                  <div id="modal64" class="modal">
+                                    <!-- modal content -->
+                                    <div class="modal-content">
+
+                                      <!-- The close button -->
+                                      <span class="close" onClick="closeModal(64)">&times;</span>
+                                      <h1> Butter Twist </h1>
+                                      <img src="assets/img/swastik-biscuits/butter-twist.jpeg" class="modal-img">
+                                    </div>
+                                  </div>
+                                  <div id="modal65" class="modal">
+                                      <!-- modal content -->
+                                      <div class="modal-content">
+
+                                        <!-- The close button -->
+                                        <span class="close" onClick="closeModal(65)">&times;</span>
+                                        <h1> Marie</h1>
+                                        <img src="assets/img/swastik-biscuits/marie.jpeg" class="modal-img">
+                                      </div>
+                                    </div>
+                                    <div id="modal66" class="modal">
+                                        <!-- modal content -->
+                                        <div class="modal-content">
+
+                                          <!-- The close button -->
+                                          <span class="close" onClick="closeModal(66)">&times;</span>
+                                          <h1> Krispo ( Rs 10 ) </h1>
+                                          <img src="assets/img/swastik-biscuits/krispy-5.jpeg" class="modal-img">
+                                        </div>
+                                      </div>
       </section>
       <section id="home">
         <h1 class="section-title">Best Products @ Best Price</h1>
@@ -924,6 +1028,18 @@
                     <img src="assets/img/slides/1597492854002_154874.jpeg">
                     <div class="ism-caption ism-caption-0">Gopi's Namkeen</div>
                   </li>
+                  <li>
+                      <img src="assets/img/slides/swastik-1.jpeg">
+                      <div class="ism-caption ism-caption-0">Swastik Biscuits</div>
+                   </li>
+                   <li>
+                      <img src="assets/img/slides/swastik-2.jpeg">
+                      <div class="ism-caption ism-caption-0">Swastik Biscuits</div>
+                   </li>
+                   <li>
+                      <img src="assets/img/slides/sloppy-noodles.jpeg">
+                      <div class="ism-caption ism-caption-0">Sloppy Noodles</div>
+                   </li>
                 </ol>
               </div>
 
@@ -934,7 +1050,7 @@
                 <h1 class="section-title">About Us</h1>
                     <p class="section-description">
                         Sujeet Kirana Store - established in 2010 founded by Binod Sah (CEO) and Sujeet Kumar Gupta (Business Development Manager) is a one stop store for all your kirana requirements. <br />
-                        Dealer of : Satyendra Sattoo, Rajendra Masala, Sky Detergent Powder, Sloppy Noodles, Archita Agarbatti
+                        Dealer of : Satyendra Sattoo, Rajendra Masala, Sky Detergent Powder, Sloppy Noodles, Archita Agarbatti, Gopi's Namkeen, Swastik Biscuits
                     </p>
             </div>
         </div>
@@ -954,7 +1070,7 @@
             <h2>Contact Us :</h2>
             <p>Email : <a href="mailto:sujeetkiranastore.sonpur@gmail.com" style="text-decoration:none; color: #111;">sujeetkiranastore.sonpur@gmail.com</a></p>
             <p>Phone Number :</p>
-            <p> <i class="icon-phone icons"></i><a target="_blank" href="tel:91 7780011796" style="text-decoration:none; color: #111;"><+917780011796</a>,  <i class="icon-phone icons"></i><a target="_blank" href="tel:919097360099" style="text-decoration:none; color: #111;">+91 9097360099</a></p>
+            <p> <i class="icon-phone icons"></i><a target="_blank" href="tel:91 7780011796" style="text-decoration:none; color: #111;">+917780011796</a>,  <i class="icon-phone icons"></i><a target="_blank" href="tel:919097360099" style="text-decoration:none; color: #111;">+91 9097360099</a></p>
             <p>Whatsapp Number:</p>
             <p> <i class="icon-speech icons"></i> <a target="_blank" href="https://api.whatsapp.com/send?phone=918709780015&text=Hi%20Welcome%20to%20Sujeet%20Kirana%20Store.%20How%20can%20we%20help%20you.." style="text-decoration:none; color: #111;">+91 8709780015</a></p>
           </div>
